eks deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: 214939106712.dkr.ecr.us-east-1.amazonaws.com/nodejs-app-repo:latest 
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ecr-registry-secret
