eks deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: application
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
